src/web/overlays/prod/ingress.yaml

  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  spec:
    tls:
    - hosts:
        - web.dhavalikars.us
      secretName: web-tls
    rules:
      - host: web.dhavalikars.us
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: web-service-v1
                  port:
                    number: 80
